# cat-tag

./: .gitignore  CAT+TAG.spec  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: README.md  cat-tag.icns
assets/fonts/: PT-Root-UI_Bold.css  PT-Root-UI_Bold.html  PT-Root-UI_Light.css  PT-Root-UI_Light.html  PT-Root-UI_Medium.css  PT-Root-UI_Medium.html  PT-Root-UI_Regular.css  PT-Root-UI_Regular.html  PT-Root-UI_VF.css  PT-Root-UI_VF.html  README.md
assets/sample_camera_xmls/: README.md  arri_alexa_mini_lf.xml  canon_c300_xf.xml  dji_mavic3_xmp.xml  red_komodo_sample.rmd  sony_fx3_nonrealtimemeta.xml
minicat/: __init__.py  __main__.py
minicat/ai/: __init__.py  director.py  fcpxml_exporter.py  journalist_cutter.py  journalist_cutter.py.backup-20260601-132310  journalist_cutter.py.backup-20260601-150231  multi_xmeml_exporter.py  narrative_vo_exporter.py  tag_suggester.py  transcriber.py  voiceover.py  xmeml_exporter.py  xmeml_exporter.py.working-2026-05-31
minicat/cli/: __init__.py  main.py
minicat/core/: __init__.py  config.py  db.py  env.py  fingerprint.py  models.py  search.py  settings.py  video.py  workers.py
minicat/ui/: __init__.py  app.py  app.py.bak.before-restore-20260530-0002  app.py.bak.inspector-clean-2026  desktop.py  workspace.py
minicat/ui/components/: dialogs.py  drawers.bak.py  drawers.py  inspector.bak.py  (+1 more)
scripts/: build_macos_app.py  dev.py  reexport_ai_director_from_txt.py  test_ai_director.py
tests/: __init__.py  test_camera_metadata.py
